# tic-tac-toe-ui

./: .gitignore  README.md  asset-manifest.json  index.html  jsconfig.json  package-lock.json  package.json  pyproject.toml  q_table.json  script.js  style.css  value_table.json  vtable.json
notebooks/: table.json  train_tabular_agent copy.ipynb  train_tabular_agent.ipynb  training_analysis_latest.ipynb  ui_value_table.json
scripts/: eval.py  generate_vtable_minimax.py  merge_tables.py  play_against_random.py  train.py  train_schedule.sh
src/: index.css  index.js  lib.js
src/components/: App.js  Board.js  Button.js  Game.js  Square.js  Title.js
src/tic_tac_toe/: __init__.py  tic_tac_toe.py
src/tic_tac_toe_rl/: __init__.py  agents.py  canonicalization.py  egocentric.py  game_env.py  q_learning.py  tic_tac_toe.py
static/css/: 2.7eb20091.chunk.css  2.7eb20091.chunk.css.map  2.bf32f6b8.chunk.css  2.bf32f6b8.chunk.css.map  main.83621cc0.chunk.css  main.83621cc0.chunk.css.map  main.9cc44cc3.chunk.css  main.9cc44cc3.chunk.css.map
static/js/: 2.4c97bab0.chunk.js  2.4c97bab0.chunk.js.map  2.9c9f77e5.chunk.js  (+11 more)
tests/: test.html  test.js  test_egocentric.py  test_tic_tac_toe.py
tic-tac-toe-rl/: .gitignore  README.md  agent.py  agents.py  egocentric.py  eval.py  merge_tables.py  q_learning.ipynb  q_learning.py  table_analysis.py  test_tic_tac_toe_board.py  tic_tac_toe.py  tic_tac_toe_board.py  train.py  train_offline.py  train_q_learner.py  train_schedule.sh  train_tabular_agent.ipynb  training.py  training_analysis.ipynb  training_analysis_latest.ipynb
(+4 files in other folders)
