[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe"
version = "0.1.0"
authors = [{ name = "James Gadoury", email = "gadouryjames@gmail.com" }]
dependencies = ["numpy>=2.3.1,<3.0"]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0",
    "flake8",
    "mypy",
    "matplotlib>=3.10.3,<4.0",
    "tqdm>=4.67.1,<5.0",
]
